examples/testgui/Errors/post.py


def startup(parent):
	print('post startup')
